Work on Google wallet Service.
Work on Google wallet Service.
Backend work on adding passes to wallet.